--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,31 @@
 
 version: "3"
 services:
+  startNode: 
+    image: kadlab:latest
+    stdin_open: true
+    tty: true
+    networks:
+      kademlia_network:
+        ipv4_address: 172.1.17.2
   kademliaNodes:
     image: kadlab:latest # Make sure your Docker image has this name.
     stdin_open: true
     tty: true
-    deploy:
-      mode: replicated
-      replicas: 50  
-#        resources:
-#          limits:
-#              cpus: "0.1"
-#              memory: 50M
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 10s
-#    ports:
-#      - "4000:80"
+#   deploy:
+#        restart_policy:
+#        condition: on-failure
+#        delay: 5s
+#        max_attempts: 3
+#        window: 10s
     networks:
       - kademlia_network
-      
+    depends_on:    
+      - startNode 
 networks:
   kademlia_network:
-
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.1.17.0/24
